db context e migracoes iniciais

--- a/Back/src/UltraEventos.API/appsettings.Development.json
+++ b/Back/src/UltraEventos.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=UltraEventos.db"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
